tests/baselines/reference/YieldExpression9_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts(1,17): error TS1219: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression9_es6.ts (1 errors) ====
    var v = function*() {
                    ~
!!! error TS1219: Generators are only available when targeting ECMAScript 6 or higher.
      yield(foo);
    }